# cazal

./: Justfile  README.md  build_wasm.sh  cazal.wasm  meson.build
src/: exec.c  exec.h  lex.c  lex.h  main.c  main.h  prints.c  prints.h  wasm.c
web/: cazal.js  cazal.wasm  index.html
web/.vercel/: project.json
